# julia_web_sdk

./: .gitignore  LICENSE  README.md
dart/: README.md  pubspec.yaml
dart/lib/: julia_web_sdk.dart
dart/lib/src/: claims.dart  models.dart  shelf_adapter.dart  signature_client.dart
examples/dart/: client_usage.dart  shelf_server.dart
examples/java/: SignatureClientExample.java  SpringSdkConfig.java
examples/javascript/: client_usage.mjs  express_server.mjs
examples/python/: client_usage.py  fastapi_server.py
examples/rust/: client_usage.rs  server_integration.rs
java/: README.md  pom.xml
java/src/main/java/social/julia/sdk/: ClaimProperties.java  JuliaWebSdkException.java
java/src/main/java/social/julia/sdk/client/: SignatureClient.java
java/src/main/java/social/julia/sdk/model/: SignatureModels.java
java/src/main/java/social/julia/sdk/server/: AuthAdapterConfig.java  JuliaWebSocketConfig.java  JuliaWebSocketProxyHandler.java  SignatureAdapterConfig.java  SpringAuthController.java  SpringSignatureController.java
javascript/: README.md  package.json
javascript/src/: index.js  models.js
javascript/src/client/: signatureClient.js
javascript/src/server/: expressAdapter.js
python/: README.md  pyproject.toml
python/julia_web_sdk/: __init__.py  claims.py  client.py  models.py  server_fastapi.py
rust/: Cargo.toml  README.md
rust/src/: claims.rs  error.rs  lib.rs  models.rs  signature_client.rs
shared/: api_contract.md  claim_properties.txt
