[project]
name = "julia_web_sdk"
version = "1.0.0"
description = "Julia Web SDK for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "websockets>=13.1"
]

[project.optional-dependencies]
examples = ["uvicorn>=0.30.0"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
