[package]
name = "julia_web_sdk"
version = "1.0.0"
edition = "2024"

[dependencies]
dg_xch_core = { git = "https://github.com/GalactechsLLC/dg_xch_utils.git", branch = "wallet_updates" }
portfu = { git = "https://github.com/GalactechsLLC/portfu.git", branch = "dev" }
reqwest = { version = "0.12.23", features = ["cookies"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["serde"]}
tokio = {version = "1.38.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
